--- a/Proyecto cliente judicial/user.html
+++ b/Proyecto cliente judicial/user.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
 
 <body>
@@ -26,6 +27,7 @@
                 <li><a href="#" data-section="judicial"><i class="fas fa-gavel"></i> Procesos Judiciales</a></li>
                 <li><a href="#" data-section="extrajudicial"><i class="fas fa-file-contract"></i> Procesos
                         Extrajudiciales</a></li>
+                <li><a href="#" data-section="assignments"><i class="fas fa-tasks"></i> Mis Asignaciones</a></li>
                 <li><a href="#" data-section="alerts"><i class="fas fa-bell"></i> Alertas</a></li>
                 <li><a href="#" data-section="reports"><i class="fas fa-chart-bar"></i> Reportes</a></li>
             </ul>
@@ -202,6 +204,34 @@
                             <!-- Extrajudicial processes will be loaded here -->
                         </tbody>
                     </table>
+                </div>
+            </section>
+
+            <!-- Assignments Section -->
+            <section id="assignments" class="content-section hidden">
+                <div class="section-header">
+                    <h2>Mis Asignaciones</h2>
+                    <div class="header-actions">
+                        <button onclick="app.exportAssignments()" class="btn-secondary"><i class="fas fa-download"></i>
+                            Exportar</button>
+                    </div>
+                </div>
+
+                <div class="search-filters">
+                    <div class="search-input-container">
+                        <i class="fas fa-search search-icon"></i>
+                        <input type="text" id="assignmentSearch" placeholder="Buscar asignaciones..." class="search-input">
+                    </div>
+                    <select id="assignmentFilter" class="filter-select">
+                        <option value="">Todos los estados</option>
+                        <option value="assigned">Asignado</option>
+                        <option value="in_progress">En Progreso</option>
+                        <option value="completed">Completado</option>
+                    </select>
+                </div>
+
+                <div class="assignments-grid" id="assignmentsGrid">
+                    <!-- Assignments will be loaded here -->
                 </div>
             </section>
 
