--- a/Proyecto cliente judicial/user.html
+++ b/Proyecto cliente judicial/user.html
@@ -21,15 +21,10 @@
                 <span>Sistema Judicial</span>
             </div>
             <ul class="sidebar-menu">
-                <li><a href="#" data-section="dashboard" class="active"><i class="fas fa-tachometer-alt"></i>
-                        Dashboard</a></li>
-                <li><a href="#" data-section="clients"><i class="fas fa-user-tie"></i> Clientes</a></li>
+                <li><a href="#" data-section="assignments" class="active"><i class="fas fa-tasks"></i> Mis Asignaciones</a></li>
                 <li><a href="#" data-section="judicial"><i class="fas fa-gavel"></i> Procesos Judiciales</a></li>
-                <li><a href="#" data-section="extrajudicial"><i class="fas fa-file-contract"></i> Procesos
-                        Extrajudiciales</a></li>
-                <li><a href="#" data-section="assignments"><i class="fas fa-tasks"></i> Mis Asignaciones</a></li>
+                <li><a href="#" data-section="extrajudicial"><i class="fas fa-file-contract"></i> Procesos Extrajudiciales</a></li>
                 <li><a href="#" data-section="alerts"><i class="fas fa-bell"></i> Alertas</a></li>
-                <li><a href="#" data-section="reports"><i class="fas fa-chart-bar"></i> Reportes</a></li>
             </ul>
             <div class="sidebar-footer">
                 <button id="logoutBtn" class="btn-logout">
@@ -42,7 +37,7 @@
         <main class="main-content">
             <header class="top-bar">
                 <div class="breadcrumb">
-                    <span id="currentSection">Dashboard</span>
+                    <span id="currentSection">Mis Asignaciones</span>
                 </div>
                 <div class="user-info">
                     <span id="currentUser">Usuario</span>
@@ -50,104 +45,12 @@
                 </div>
             </header>
 
-            <!-- Dashboard Section -->
-            <section id="dashboard" class="content-section">
-                <div class="section-header">
-                    <h2>Dashboard</h2>
-                    <p>Resumen general del sistema</p>
-                </div>
+            <!-- Panel flotante para alertas urgentes -->
+            <div id="urgentFlyout" class="urgent-flyout hidden">
+                <!-- Las alertas urgentes se cargarán aquí dinámicamente -->
+            </div>
 
-                <div class="metrics-grid">
-                    <div class="metric-card">
-                        <div class="metric-icon">
-                            <i class="fas fa-users"></i>
-                        </div>
-                        <div class="metric-content">
-                            <h3 id="totalClients">0</h3>
-                            <p>Total Clientes</p>
-                        </div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-icon">
-                            <i class="fas fa-gavel"></i>
-                        </div>
-                        <div class="metric-content">
-                            <h3 id="totalJudicial">0</h3>
-                            <p>Procesos Judiciales</p>
-                        </div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-icon">
-                            <i class="fas fa-file-contract"></i>
-                        </div>
-                        <div class="metric-content">
-                            <h3 id="totalExtrajudicial">0</h3>
-                            <p>Procesos Extrajudiciales</p>
-                        </div>
-                    </div>
-                    <div class="metric-card">
-                        <div class="metric-icon">
-                            <i class="fas fa-percentage"></i>
-                        </div>
-                        <div class="metric-content">
-                            <h3 id="effectiveness">0%</h3>
-                            <p>Efectividad</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="dashboard-charts">
-                    <div class="chart-container">
-                        <h3>Procesos por Estado</h3>
-                        <canvas id="processStatusChart"></canvas>
-                    </div>
-                    <div class="chart-container">
-                        <h3>Actividad Mensual</h3>
-                        <canvas id="monthlyActivityChart"></canvas>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Clients Section -->
-            <section id="clients" class="content-section hidden">
-                <div class="section-header">
-                    <h2>Gestión de Clientes</h2>
-                    <div class="header-actions">
-                        <button onclick="app.exportClients()" class="btn-secondary"><i class="fas fa-download"></i>
-                            Exportar</button>
-                    </div>
-                </div>
-
-                <div class="search-filters">
-                    <div class="search-input-container">
-                        <i class="fas fa-search search-icon"></i>
-                        <input type="text" id="clientSearch" placeholder="Buscar cliente... (búsqueda en tiempo real)" class="search-input">
-                    </div>
-                    <select id="clientFilter" class="filter-select">
-                        <option value="">Todos los estados</option>
-                        <option value="activo">Activo</option>
-                        <option value="inactivo">Inactivo</option>
-                    </select>
-                </div>
-
-                <div class="table-container">
-                    <table class="data-table">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Nombre</th>
-                                <th>Documento</th>
-                                <th>Dirección</th>
-                                <th>Estado</th>
-                                <th>Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody id="clientsTableBody">
-                            <!-- Clients will be loaded here -->
-                        </tbody>
-                    </table>
-                </div>
-            </section>
+            <!-- Clients Section removed for user role -->
 
             <!-- Judicial Processes Section -->
             <section id="judicial" class="content-section hidden">
@@ -208,7 +111,7 @@
             </section>
 
             <!-- Assignments Section -->
-            <section id="assignments" class="content-section hidden">
+            <section id="assignments" class="content-section">
                 <div class="section-header">
                     <h2>Mis Asignaciones</h2>
                     <div class="header-actions">
@@ -258,55 +161,7 @@
                 </div>
             </section>
 
-            <!-- Reports Section -->
-            <section id="reports" class="content-section hidden">
-                <div class="section-header">
-                    <h2>Reportes y Métricas</h2>
-                    <div class="report-filters">
-                        <select id="reportPeriod" class="filter-select">
-                            <option value="month">Este Mes</option>
-                            <option value="quarter">Este Trimestre</option>
-                            <option value="year">Este Año</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="reports-grid">
-                    <div class="report-card">
-                        <h3>Efectividad por Tipo de Proceso</h3>
-                        <canvas id="effectivenessChart"></canvas>
-                    </div>
-                    <div class="report-card">
-                        <h3>Distribución de Estados</h3>
-                        <canvas id="distributionChart"></canvas>
-                    </div>
-                    <div class="report-card">
-                        <h3>Tendencia de Recuperación</h3>
-                        <canvas id="trendChart"></canvas>
-                    </div>
-                </div>
-
-                <div class="statistics-summary">
-                    <div class="stat-card">
-                        <h4>Estadísticas de Clientes</h4>
-                        <div id="clientStats" class="stat-content">
-                            <!-- Client statistics will be loaded here -->
-                        </div>
-                    </div>
-                    <div class="stat-card">
-                        <h4>Estadísticas de Procesos</h4>
-                        <div id="processStats" class="stat-content">
-                            <!-- Process statistics will be loaded here -->
-                        </div>
-                    </div>
-                    <div class="stat-card">
-                        <h4>Estadísticas de Alertas</h4>
-                        <div id="alertStats" class="stat-content">
-                            <!-- Alert statistics will be loaded here -->
-                        </div>
-                    </div>
-                </div>
-            </section>
+            <!-- Reports Section removed for user role -->
         </main>
     </div>
 
